import "client.comm.proto";

package client; // 客户端加载地图资源等准备就绪，已经展示场景实例

message role_name_msg {
    repeated role_name  rn = 1;  // 名字数据，可能为多个
}



