import "client.comm.proto";
package client; // 客户端加载地图资源等准备就绪，已经展示场景实例

message scene_ready {
	required uint32 time_now = 1; // 客户端上报自己持有的unixtime时钟
	enum READY_OCCASION
	{
	    LOGIN = 0 ; // 登录确认场景加载完成
	    JUMP  = 1 ; // 游戏内跳转场景加载完成
	}
	optional READY_OCCASION ro = 2; // 场景准备时机
	
	optional server_head svr_head = 1000; // 服务端填写项，客户端不需要关心也不必填写数据
}


